# DinoSourList-AppStore-Official-Release

./: .gitignore  README.md  env-Init.cmd  pyproject.toml  run&install.cmd  shortcut.py
BoxLink-API/: BoxAutomate.deps.json
BoxLink-API/win-x86/: BoxAutomate.application
BoxLink-API/win-x86/app.publish/: BoxAutomate.application  BoxAutomate.deps.json
BoxLink-API/win-x86/app.publish/Application Files/BoxAutomate_1_0_0_1/: Box.V2.dll.deploy  BoxAutomate.dll.deploy  BoxAutomate.exe.deploy
News/: link.md  news.md
config-record/: record.json
src/: main.py
src/lib/: LLMController-old.py  LLMController.py  __init__.py  app_controller.py  boxlink_api.py  clickable_label.py  folder_parser.py  main_controller.py  readme_viewer.py  software_card.py  store_card.py  styles.py  workers.py
src/ui/: remove.py
src/ui/ui_build/: ui_main.py
src/ui/ui_designer/: main.ui
