[project]
name = "frondend-DinoSaurList"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown==3.4.0",
    "nltk>=3.9",
    "pandas>=3.0.3",
    "pyside6==6.8.0.2",
    "pywin32>=311",
]

[tool.uv]
index-url = "https://usw2p-edge.packages.broadcom.net/artifactory/api/pypi/platform-pypi/simple"
allow-insecure-host = ["usw2p-edge.packages.broadcom.net"]
